// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Videos page: Render should render the video component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-white font-quicksand table align-middle rounded-3xl shadow-lg w-[18rem] xs:w-[22.5rem] sm:w-[30rem] md:w-[37.5rem] hover:cursor-grab hover:-translate-y-0.5 hover:scale-105 duration-300"
        data-testid="video title"
        role="button"
        tabindex="0"
      >
        <div
          class="p-5"
        >
          <div
            class="pt-5 pb-3"
          >
            <div
              class="font-semibold text-2xl  text-homepageHeaderText"
            >
              video title
            </div>
            <div
              class="font-md text-xl  text-homepageHeaderText"
            >
              video description
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-white font-quicksand table align-middle rounded-3xl shadow-lg w-[18rem] xs:w-[22.5rem] sm:w-[30rem] md:w-[37.5rem] hover:cursor-grab hover:-translate-y-0.5 hover:scale-105 duration-300"
      data-testid="video title"
      role="button"
      tabindex="0"
    >
      <div
        class="p-5"
      >
        <div
          class="pt-5 pb-3"
        >
          <div
            class="font-semibold text-2xl  text-homepageHeaderText"
          >
            video title
          </div>
          <div
            class="font-md text-xl  text-homepageHeaderText"
          >
            video description
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`navigate to videos page 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="bg-mobileWave sm:bg-wave bg-no-repeat pb-2 bg-span"
      >
        <div
          class="flex flex-wrap h-[22rem]"
        >
          <div
            class="mx-auto pt-[3rem] md:pt-[2rem]"
          >
            <h1
              class="text-titansDarkBlue font-bold text-center sm:mt-[1rem] text-3xl sm:text-5xl lg:text-6xl mt-8 pb-4"
              data-testid="header-title"
            >
              Videos
            </h1>
            <div
              class="font-medium text-homepageHeaderSubTitle text-sm md:text-base lg:text-xl text-center w-2/3 lg:w-[45rem] mx-auto"
            >
              Here you can watch a few short videos and hear from the Titans as you continue to learn and get to know even more about how to be strong and healthy.
            </div>
          </div>
        </div>
      </div>
      <div
        class="pl-5 md:py-10 md:pl-10"
      >
        <div
          class="md:px-5"
        >
          <div
            class="font-semibold text-[#243A73] text-2xl md:text-3xl lg:text-4xl py-5"
            data-testid="menutitle-title"
          >
            Watch and learn with these short videos
          </div>
          <div
            class="font-medium text-[#243A73] md:text-xl lg:text-xl md:pb-5"
          >
            Click on whichever video you'd like to watch to learn more and hear from some Titans!
          </div>
        </div>
        <div
          class="react-multi-carousel-list  "
          dir="ltr"
        >
          <ul
            class="react-multi-carousel-track "
            style="transition: none; overflow: unset; transform: translate3d(0px,0,0);"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="bg-mobileWave sm:bg-wave bg-no-repeat pb-2 bg-span"
    >
      <div
        class="flex flex-wrap h-[22rem]"
      >
        <div
          class="mx-auto pt-[3rem] md:pt-[2rem]"
        >
          <h1
            class="text-titansDarkBlue font-bold text-center sm:mt-[1rem] text-3xl sm:text-5xl lg:text-6xl mt-8 pb-4"
            data-testid="header-title"
          >
            Videos
          </h1>
          <div
            class="font-medium text-homepageHeaderSubTitle text-sm md:text-base lg:text-xl text-center w-2/3 lg:w-[45rem] mx-auto"
          >
            Here you can watch a few short videos and hear from the Titans as you continue to learn and get to know even more about how to be strong and healthy.
          </div>
        </div>
      </div>
    </div>
    <div
      class="pl-5 md:py-10 md:pl-10"
    >
      <div
        class="md:px-5"
      >
        <div
          class="font-semibold text-[#243A73] text-2xl md:text-3xl lg:text-4xl py-5"
          data-testid="menutitle-title"
        >
          Watch and learn with these short videos
        </div>
        <div
          class="font-medium text-[#243A73] md:text-xl lg:text-xl md:pb-5"
        >
          Click on whichever video you'd like to watch to learn more and hear from some Titans!
        </div>
      </div>
      <div
        class="react-multi-carousel-list  "
        dir="ltr"
      >
        <ul
          class="react-multi-carousel-track "
          style="transition: none; overflow: unset; transform: translate3d(0px,0,0);"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
